# RBAC-FastAPI

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py  seeder.py
app/core/: config.py  database.py  security.py
app/middleware/: __init__.py  auth_middleware.py  permission_middleware.py  tenant_middleware.py
app/models/: __init__.py  base.py  multi_tenancy.py  permission.py  permission_model.py  permissions.py  product.py  products.py  role.py  role_model.py  role_permission.py  role_permission_model.py  role_permissions.py  roles.py  status_model.py  tenants.py  user.py  user_model.py  users.py
app/repositories/: notes.py  orders.py  permission.py  permission_repository.py  permissions.py  products.py  role.py  role_permission_repository.py  role_permissions.py  role_repository.py  roles.py  tenants.py  user.py  user_repository.py
app/routers/: auth.py  auth_router.py  notes.py  orders.py  permission.py  permission_router.py  permissions.py  products.py  role.py  role_permission.py  role_permission_router.py  role_permissions.py  role_router.py  roles.py  tenants.py  user.py  user_router.py  users.py
app/schemas/: __init__.py  notes.py  orders.py  permission.py  permission_schema.py  products.py  role.py  role_permission_schema.py  role_permissions.py  role_schema.py  tenants.py  user.py  user_schema.py
app/services/: notes.py  orders.py  permission.py  permission_service.py  permissions.py  products.py  role.py  role_permission.py  role_permission_service.py  (+7 more)
migrations/: env.py
(+17 files in other folders)
